update build scripts

--- a/readme.html
+++ b/readme.html
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="Shift_JIS"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 
 <head>
 <link rev="MADE" href="mailto:vavivavi@yahoo.co.jp" />
 <link rel="INDEX" href="orverview.html" />
-<meta http-equiv="Content-Type" content="text/html; charset=Windows-31J" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <link rel="stylesheet" type="text/css" href="../../vavi.css" />
 <style>
@@ -20,8 +20,8 @@ pre {
  *
  * Written by Naohide Sano
  *
- * @description	Windows Ø–¾‘‚ğˆµ‚¤ƒNƒ‰ƒX
- * @status	“®ìŠm”F
+ * @description	Windows è¨¼æ˜æ›¸ã‚’æ‰±ã†ã‚¯ãƒ©ã‚¹
+ * @status	å‹•ä½œç¢ºèª
  *
  * @author	<a href="mailto:vavivavi@yahoo.co.jp">Naohide Sano</a> (nsano)
  *
@@ -32,22 +32,22 @@ pre {
 <body>
 
 <p>
-Windows Ø–¾‘‚ğˆµ‚¤ƒNƒ‰ƒXƒNƒ‰ƒXD
+Windows è¨¼æ˜æ›¸ã‚’æ‰±ã†ã‚¯ãƒ©ã‚¹ã‚¯ãƒ©ã‚¹ï¼
 </p>
 
-<h2>‚±‚ê‚©‚çÀ‘•‚·‚é‚±‚Æ</h2>
+<h2>ã“ã‚Œã‹ã‚‰å®Ÿè£…ã™ã‚‹ã“ã¨</h2>
 
 <ul>
 <li></li>
 </ul>
 
-<h2>QÆ</h2>
+<h2>å‚ç…§</h2>
 
 <ul>
 <li><a href="http://www.j2ee-security.net/">Java Security for the Enterprise (jstk)</a></li>
 </ul>
 
-<h2>ˆêŸƒ‰ƒCƒZƒ“ƒX</h2>
+<h2>ä¸€æ¬¡ãƒ©ã‚¤ã‚»ãƒ³ã‚¹</h2>
 
 <a href="http://info.isl.ntt.co.jp/crypt/camellia/index.html">Camellia</a>
 
